# ST-Assignment

./: .env  .env.example  .gitignore  ADR.md  ANOMALY_DETECTION_SUMMARY.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SERVICE_ENDPOINTS.md  docker-compose.yml  main.py  pyproject.toml
config/: alerting_rules.yml  alertmanager.yml  prometheus.yml
config/grafana/dashboards/: anomaly.json  data_quality.json  health.json  pipeline.json
dags/: backfill_dag.py  collect_raw_data_dag.py  nightly_batch_dag.py  weekly_batch_dag.py
data/: device_inventory.csv  interface_stats.csv  syslogs.jsonl
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.iceberg-init  entrypoint.sh
docs/: IMPLEMENTATION_PLAN.md  PSI_AND_IF.md  SERVICE_ENDPOINTS.md
scripts/: generate_synthetic_data.py  validate_pipeline.sh
sql/iceberg/ddl/: README.md  (+9 more)
src/admin/: __init__.py
src/catalog/: rest_catalog.py
src/common/: artifact_store.py  config.py  logging.py  schema.py  spark_session.py
src/consumers/: base.py  jsonl_consumer.py
src/models/: base.py  flatline_detector.py  flatline_detector_old.py  isolation_forest.py  psi_drift_detector.py
src/monitoring/: exporter.py  metrics.py
src/pipeline/: baseline_refresh.py  batch.py  bronze_ingest.py  dlq_reprocessor.py  flatline_streaming.py  flatline_streaming_v1.py  gold_recompute.py  isolation_forest_train.py  pending_enrichment.py  psi_drift_detect.py  silver_transforms.py  streaming.py  zscore_iqr_streaming.py
src/producers/: generate.py  producer_kafka.py
src/query/: duckdb_engine.py  fastapi_bridge.py
src/storage/: base.py  clickhouse_writer.py  iceberg_writer.py
src/transforms/: effective_util.py  flatline.py  flatline_v2.py  health_score.py
src/validators/: base.py  chain.py  rules.py  spark_expressions.py
tests/: conftest.py
tests/models/: conftest.py  test_anomaly_detection.py
tests/pipeline/: test_ingestion_quality_and_aggregation.py  test_streaming_orphan.py
(+15 files in other folders)
